<resources>
    <string name="app_name" translatable="false">iWeather</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_alert">Alerts</string>
    <string name="Weather_State">Weather State</string>
    <string name="language_setting">Language</string>
    <string name="arabic_language">Arabic</string>
    <string name="english_language">English</string>
    <string name="location_setting">Location</string>
    <string name="gps_location">GPS</string>
    <string name="map_location">Map</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="windspeed_setting">Wind Speed</string>
    <string name="m_sec_windspeed">Meter / Second</string>
    <string name="mile_hour_windspeed">Mile / Hour</string>
    <string name="temperature_setting">Temperature</string>
    <string name="celsius_temperature">Celsius</string>
    <string name="kelvin_temperature">Kelvin</string>
    <string name="fahrenheit_temperature">Fahrenheit</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="clouds">Clouds</string>
    <string name="windspeed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="metric">m/sec</string>
    <string name="mile">mile/h</string>
    <string name="hPa">hPa</string>
    <string name="persent" translatable="false">%</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="title_activity_map_for_location" translatable="false">MapForLocationActivity</string>
    <string name="ok">Ok</string>
</resources>