<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.shekoo.iweather.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favortie"
        android:name="com.shekoo.iweather.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.shekoo.iweather.ui.setting.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_setting"
        />

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.shekoo.iweather.ui.alert.AlertFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/fragment_alert" />
</navigation>