<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundedcolor3"
    tools:context=".ui.alert.AddAlertActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="231dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundedcolor2"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/from"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/selectFirstDate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    app:srcCompat="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/firstDate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/amaranth"
                    android:gravity="center"
                    tools:text="TextView"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/selectFirstTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    app:srcCompat="@drawable/ic_alarm" />

                <TextView
                    android:id="@+id/firstTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/amaranth"
                    android:gravity="center"
                    tools:text="TextView"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundedcolor2"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/to"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/selectSecondDate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    app:srcCompat="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/secondDate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/amaranth"
                    android:gravity="center"
                    tools:text="TextView"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/selectSecondTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    app:srcCompat="@drawable/ic_alarm" />

                <TextView
                    android:id="@+id/secondTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/amaranth"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    tools:text="TextView" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/notificationButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedcolor2"
                    android:buttonTint="@color/textColor"
                    android:checked="true"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/notification"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/AlarmButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:buttonTint="@color/textColor"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedcolor2"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/alarm"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedcolor2"
        android:fontFamily="@font/amaranth"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>